<resources>
    <string name="app_name">JetCoffeeApp</string>
    <string name="placeholder_search">Cari kopi pilihanmu!</string>
    <string name="category_all">All</string>
    <string name="category_americano">Americano</string>
    <string name="category_cappucino">Cappuccino</string>
    <string name="category_espresso">Espresso</string>
    <string name="category_frappe">Frappe</string>
    <string name="category_latte">Latte</string>
    <string name="category_macchiato">Macchiato</string>
    <string name="category_mocha">Mocha</string>
    <string name="section_category">Mau ngopi apa hari ini?</string>
    <string name="section_favorite_menu">Menu Favorit</string>
    <string name="section_best_seller_menu">Menu Terlaris</string>
    <string name="menu_home">Home</string>
    <string name="menu_favorite">Favorite</string>
    <string name="menu_profile">Profile</string>
</resources>