...
   orderReward: List<OrderReward>,
   modifier: Modifier = Modifier,
   navigateToDetail : (Long) -> Unit
){
    LazyVerticalGrid(columns = GridCells.Adaptive(160.dp), contentPadding = PaddingValues(16.dp),
    horizontalArrangement = Arrangement.spacedBy(16.dp), verticalArrangement = Arrangement.spacedBy(16.dp),
    modifier = modifier.testTag("RewardList")){
        items(orderReward){data ->
            RewardItem(image = data.reward.image, title = data.reward.title,
                requirePoint = data.reward.requirePoint, modifier = Modifier.clickable {
                    navigateToDetail(data.reward.id)
                }
            )
...
